# PythonParser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  readme.md  requirements.txt  utils.sh
app/: main.py
app/tests/: t_main.py
docs/: doc.md
